<resources>
    <string name="app_name">FTW Bank</string>
    <string name="welcome">Welcome to FTW Bank</string>
    <string name="disclaimer">This is not a real bank. You will not be dealing with real money.</string>
    <string name="copyright">© Ken Page, 2023</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="deposit_button">+++</string>
    <string name="withdraw_button">---</string>
    <string name="deposit_field">Make a deposit:</string>
    <string name="withdraw_field">Make a withdrawal:</string>
    <string name="account_name">Account belonging to:</string>
    <string name="account_num">Account#:</string>
    <string name="current_bal">Current Balance:</string>
    <string name="with_trans">WITHDRAW</string>
    <string name="dep_trans">DEPOSIT</string>
    <string name="thanks">THANK YOU FOR USING FTW</string>
    <string name="acct_mgmt">Account Management Options:</string>
    <string name="trans_hist">VIEW TRANSACTION HISTORY</string>
    <string name="logout">SIGN OUT</string>
    <string name="account_create_dialog">Create New Account</string>
    <string name="account_login_dialog">Login</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="email">Email:</string>
    <string name="password">Create a password:</string>
    <string name="hint_text">Type Stuff Here</string>
    <string name="login_email_hint">Email address:</string>
    <string name="login_pass_hint">Password:</string>
    <string name="transaction_history">Transaction History</string>
    <string name="back_to_account_view">Back to Account</string>
    <string name="back_to_account">Back to Account</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="timestamp">Timestamp</string>
    <string name="new_balance">New Balance</string>
    <string name="enter_deposit_amount_hint">Enter deposit amount</string>
    <string name="enter_withdrawal_amount_hint">Enter withdrawal amount</string>
</resources>