<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textTransactionType"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/transaction_type"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textTransactionAmount"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/transaction_amount" />

    <TextView
        android:id="@+id/textTimestamp"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/timestamp" />

    <TextView
        android:id="@+id/textNewBalance"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/new_balance" />

</LinearLayout>