<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/copyright"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account_activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blank"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/thanks"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/acct_mgmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/acct_mgmt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_bal" />

    <TextView
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/account_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thanks" />

    <TextView
        android:id="@+id/acct_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@+id/thanks" />

    <TextView
        android:id="@+id/account_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_num"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@+id/account_name" />

    <TextView
        android:id="@+id/account_num_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/account_num"
        app:layout_constraintTop_toBottomOf="@+id/acct_user" />

    <TextView
        android:id="@+id/account_bal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/current_bal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/account_num"
        app:layout_constraintTop_toBottomOf="@+id/account_num" />

    <TextView
        android:id="@+id/current_bal_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/account_bal"
        app:layout_constraintTop_toBottomOf="@+id/account_num_user" />

    <Button
        android:id="@+id/trans_hist_button"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#039BE5"
        android:text="@string/trans_hist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acct_mgmt" />

    <Button
        android:id="@+id/withdraw_button"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#039BE5"
        android:text="@string/with_trans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trans_hist_button" />

    <Button
        android:id="@+id/deposit_button"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#039BE5"
        android:text="@string/dep_trans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withdraw_button" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#039BE5"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deposit_button" />
    <ImageView
            android:layout_width="141dp"
            android:layout_height="114dp" app:srcCompat="@drawable/untitled" android:id="@+id/account_page_logo"
            app:layout_constraintTop_toBottomOf="@+id/logout_button"
            app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>