<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/account_login_dialog_layout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:padding="16dp">

    <TextView
            android:id="@+id/login_email"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:gravity="right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>

    <EditText
            android:id="@+id/edit_email_login"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/login_email_hint"
            android:imeOptions="actionNext"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_email" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"/>

    <TextView
            android:id="@+id/text_pass_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/login_pass_hint"
            android:gravity="right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/edit_pass_login"/>

    <EditText
            android:id="@+id/edit_pass_login"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/login_pass_hint"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_pass_login"
            app:layout_constraintTop_toBottomOf="@id/edit_email_login" />



</androidx.constraintlayout.widget.ConstraintLayout>
